--- a/css/app.css
+++ b/css/app.css
@@ -2,21 +2,15 @@ html {
     box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
+*, *::before, *::after {
     box-sizing: inherit;
 }
 
-html,
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-body {
     background-color: #41172e;
     font-family: 'Indie Flower', cursive;
 }
@@ -29,44 +23,41 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Indie Flower', cursive;
-    font-weight: 300;
-    color: #999;
+    font-weight: 350;
+    color: #777;
 }
 
-/*
- * Styles for the deck of cards
- */
+/* Styles for the deck of cards */
 
 .deck {
-    width: 660px;
-    min-height: 680px;
-    background: #999;
-    padding: 32px;
+    width: 50vw;
+    height: 50vh;
+    background: #777;
+    margin: 0;
+    padding: 0;
     border: 2px solid #3A3AFF;
     border-radius: 10px;
-    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 0 0 3em;
 }
 
 .deck .card {
     transition: 0.5s ease;
-    height: 125px;
-    width: 125px;
+    height: 15%;
+    width: 20%;
     background: #3A3AFF;
     font-size: 0;
     color: #242424;
     border-radius: 10px;
+    margin: 2%;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
 .deck .card.open {
@@ -77,7 +68,7 @@ h1 {
 }
 
 .deck .card.show {
-    font-size: 33px;
+    font-size: 30px;
 }
 
 .deck .card.noClick {
@@ -87,7 +78,7 @@ h1 {
 .deck .card.match {
     cursor: default;
     background: #fff;
-    font-size: 33px;
+    font-size: 30px;
 }
 
 /*
@@ -100,12 +91,12 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     color: #3A3AFF;
-    background: #999;
-    width: 660px;
+    background: #777;
+    width: 50%;
     border: solid;
     border-radius: 10px;
-    padding: 1em;
-    margin-bottom: 1em;
+    padding: 1%;
+    margin-bottom: 2%;
 }
 
 .score-panel .stars {
@@ -141,7 +132,7 @@ h1 {
     font-family: 'Indie Flower', cursive;
     font-size: 30px;
     text-align: center;
-    background: #999;
+    background: #777;
     margin: auto;
     border: 2px solid #3a3a3a;
     border-radius: 10px;
