--- a/css/app.css
+++ b/css/app.css
@@ -81,9 +81,7 @@ h1 {
     font-size: 30px;
 }
 
-/*
- * Styles for the Score Panel
- */
+/* Styles for the Score Panel */
 
 .score-panel {
     text-align: left;
